@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-26T16:14:09Z",
+  "timestamp" : "2022-06-27T08:16:22Z",
   "count_outdated" : 358,
   "uniques_outdated" : 193,
   "count" : 383,
-  "uniques" : 208,
+  "uniques" : 209,
   "clones" : [
     {
       "timestamp": "2022-06-13T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -91,6 +91,13 @@
     },
     {
       "timestamp": "2022-06-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
