@@ -1,3 +1,10 @@
+2022-06-27T08:16:22Z:
+* notice: last 14d: unq all: 3 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 193 358 / 208 383
+* notice: next accum: outdated-unq outdated-all / unq all: 193 358 / 209 383
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-13 2022-06-27]
+
 2022-06-26T16:14:09Z:
 * notice: last 14d: unq all: 3 25
 * notice: prev accum: outdated-unq outdated-all / unq all: 192 357 / 207 382
